Working Client added

--- a/Client/WCFClient1/App.config
+++ b/Client/WCFClient1/App.config
@@ -3,4 +3,16 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="BasicHttpBinding_ISentenceService" />
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://localhost:61729/SentenceService.svc"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISentenceService"
+                contract="ServiceReference1.ISentenceService" name="BasicHttpBinding_ISentenceService" />
+        </client>
+    </system.serviceModel>
 </configuration>
